--- a/manifest.json
+++ b/manifest.json
@@ -6,33 +6,33 @@
       "strict_min_version": "56.0"
     }
   },
+
   "name": "Your Progress",
   "version": "1.0",
   "description": "The days are long but time marches on. Check out your progress.",
   "author": "arielg",
 
   "permissions": [
-    "notifications",
-    "clipboardWrite",
     "storage"
   ],
 
   "icons": {
-    "16": "icons/yourProgress-16.png",
-    "32": "icons/yourProgress-32.png",
-    "48": "icons/yourProgress-48.png"
+    "16": "icons/progress-bar.svg",
+    "32": "icons/progress-bar.svg",
+    "48": "icons/progress-bar.svg",
+    "64": "icons/progress-bar.svg",
+    "96": "icons/progress-bar.svg"
   },
-
-  "web_accessible_resources": [
-  ],
 
   "browser_action": {
     "browser_style": false,
     "default_title": "Your Progress",
     "default_icon": {
-      "16": "icons/yourProgress-16.png",
-      "32": "icons/yourProgress-32.png",
-      "48": "icons/yourProgress-48.png"
+      "16": "icons/progress-bar.svg",
+      "32": "icons/progress-bar.svg",
+      "48": "icons/progress-bar.svg",
+      "64": "icons/progress-bar.svg",
+      "96": "icons/progress-bar.svg"
     },
     "default_popup": "popup/popup.html"
   },
@@ -41,5 +41,4 @@
     "browser_style": true,
     "page": "preferences/preferences.html"
   }
-
 }
