--- a/manifest.json
+++ b/manifest.json
@@ -37,6 +37,10 @@
     "default_popup": "popup/popup.html"
   },
 
+  "background": {
+    "scripts": ["background.js"]
+  },
+
   "options_ui": {
     "browser_style": true,
     "page": "preferences/preferences.html"
