--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
 
   "name": "Take Your Time",
   "version": "1.0",
-  "description": "Check out your progress.\n\nInspired by Andrey Azimov's \"Progress Bar OSX\" at https://www.progressbarosx.com.",
+  "description": "Four progress bars to check out your progress and see how your time is running out.\n\nThe ongoing progress of your day, month, year and even your entire life are displayed as progress bars to help you evaluate the time you wasted the appreciate the time you still have.\n\nYour remaining life is calculated (after some simple configuration) using the \"Life expectancy at birth\" statistics of the World Health Organization (WHO).\n\nInspired by Andrey Azimov's \"Progress Bar OSX\".",
   "author": "arielg",
 
   "permissions": [
